tests/ternary/valid/multiple_ternary.su
s32 main() {
    s32 a = 1 > 2 ? 3 : 4;
    s32 b = 1 > 2 ? 5 : 6;
    return a + b;
}