tests/ternary/invalid/malformed_ternary_2.su
s32 main() {
    return 1 ? 2 ? 3 : 4;
}